css/mobile.css
#mobile__menu-btn {
    display: none;
}
#navigation {
    display: block;
}
.m-home,
.copyright-content--mobile {
    display: none;
}
@media only screen and (max-width: 48em) {
    .mobile__hidden {
        display: none;
    }
    body {
        box-sizing: border-box;
    }
    body#subpage {
        background: none;
        overflow-x: hidden;
    }
    .page-description {
        height: 50px;
    }
    .navbar {
        width: 100%;
        height: 48px;
        margin: 0;
    }
    #main-content {
        margin-top: 0;
    }
    .content-left {
        width: 100%;
        margin-bottom: 10px;
        margin-top: 0;
        padding: 10px;
        box-sizing: border-box;
    }
    .content-left ul li {
        list-style: none;
    }
    /****** Header ******/
    
    #wrapper {
        width: 100%;
    }
    #header {
        background-position-y: -25px;
    }
    #logo {
        background: transparent url(../images/mobile/logo.png) no-repeat;
        width: 132px;
        height: 32px;
        float: none;
        background-size: auto 100%;
        margin: 7px auto;
    }
    #logo2 {
        background: none;
        text-indent: 0;
        position: absolute;
        top: 7px;
        right: 5px;
        width: auto;
        margin: 0;
        font-size: 14px;
        color: #bdbdbd;    
        height: auto;
    }
    #mobile__menu-btn {
        position: absolute;
        top: 0;
        left: 0;
        margin: 8px 8px;
        height: 26px;
        width: 28px;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px; 
        border-radius: 3px; 
        border: 2px solid #bdbdbd;
        display: block;
    }
    #mobile__menu-btn:after {
        content: "";
        position: absolute;
        top: 0.25em;
        left: 0;
        width: 1em;
        height: 0.125em;
        border-top: 0.375em double #bdbdbd;
        border-bottom: 0.125em solid #bdbdbd;
        font-size: 20px;
        margin: 2px 4px;
    }

    #header-subpage {
        background: none;
        height: auto;
    }
    #header .top, #header-subpage .top {
        height: 48px;
        top:0;
        position: fixed;
        background: #021420;
        z-index: 100;
    }

    /****** Navigation *******/
    
    .mobile__nav-bg {
        background-image: url(../images/template/styles/blue/header.jpg);
        background-repeat: no-repeat;
        height: 100%;
        width: 100%;
        background-position-y: -75px;
        z-index: 2;
        position: absolute;
    }
    #navigation {
        position: fixed;
        height: 100%;
        width: 100%;
        z-index: 1;
        margin: 0;
        background-color: #021420;
        display: none;
        background-repeat: repeat-y;
        background: -webkit-gradient(linear, left top, right top, from(#011b28), to(#021420));
        background: -webkit-linear-gradient(left, #021420, #011b28);
        background: -moz-linear-gradient(left, #021420, #011b28);
        background: -ms-linear-gradient(left, #021420, #011b28);
        background: -o-linear-gradient(left, #021420, #011b28);    
    }
    #navigation.active {
        display: block;
    }
    #navigation ul {
        z-index: 3;
        position: absolute;
    }
    #navigation ul li {
        float: none;
        margin: 16px 10px;
    }
    #navigation ul li.mobile__hidden {
        display: none;
    }
    #navigation ul li a {
        padding-bottom: 0;
        font-size: 18px;
        line-height: 24px;
    }
    #navigation ul li ul, 
    #navigation ul li ul.children {
        position: relative;
        background: none;
        width: auto;
        text-align: left;
        z-index: inherit;
        padding: 0;
        margin:0;
        border-bottom: 0;

        /****** override dropdown animation ******/
        display: block !important;
        left: 0 !important;
        height: auto !important;
        overflow: visible !important;
    }

    #navigation ul li ul li {
        border: none;
        padding: 0;
        text-align: left;
        width: auto;
        margin: 5px 10px;
    }
    #navigation ul li ul li a {
        text-shadow: none;
        font-weight: normal;
        font-family:Arial, Helvetica, Geneva, sans-serif;
        letter-spacing: normal;
        color: #bdbdbd;
        font-size: 18px;
        line-height: 22px;
    }
    #navigation ul li ul li a:hover {
        color: #ffffff;
    }
    #navigation ul li ul li a div {
        display: inline;
        margin-right: 4px;
    }
    /****** Mobile hide Elements ******/
    
    .coda-slider-wrapper,
    #navigation ul li ul li.arrow {
        display: none;
    }

    /****** Galleru Elements *******/
    #portfolio3 ul li {
        background: none;
    }
    #portfolio3 .project-description {
        width: 100%;
        padding: 0 10px 10px;
        box-sizing: border-box;
    }
    #portfolio3 .project-description .content-left {
        padding: 0;
    }
    #portfolio3 ul li .project-image {
        height: auto;
        width: 100%;
        box-sizing: border-box;
        padding: 10px 10px 0;
        margin:0;
    }
    #portfolio3 ul li .project-image img{
        height: auto;
        width: 100%;
        margin:0;
        margin-bottom: 10px;
    }
    #portfolio3 ul li .project-image p {
        display: none;
    }
    /****** contact ******/
    #contact {
        margin: 0;
    }
    #contact label {
        float: none;
    }
    #contact .input-wrapper {
        background: none;
        padding: 0;
        width: auto;
    }
    #contact .input-wrapper input {
        border: 1px solid #bdbdbd;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px; 
        border-radius: 3px;
        background: #f2f2f2;
        width:100%;
        box-sizing: border-box;
        height: 35px;
        padding: 5px;
    }
    #contact .input-text {
        width: 100%;
        background: none;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px; 
        border-radius: 3px; 
    }
    #contact textarea {
        width: 100%;
        padding: 5px;
        box-sizing: border-box;
        border: 1px solid #bdbdbd;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px; 
        border-radius: 3px;
        background: #f2f2f2;
    }
    #contact label.submit {
        margin-right: 0;
        right: 0;
        top: 0;
        float: left;
    }
    /****** sidebar ******/
    #sidebar {
        float: left;
        width: 100%;
    }
    .sidebar-block {
        padding: 10px;
        box-sizing: border-box;
        margin: 0;
        width:100%;
    }
    .map-holder {
        background: none;
        width: 100%;
        box-sizing: border-box;
        margin: 0;
        padding: 0;
    }
    .map-holder div:first-of-type {
        width: 100% !important;
    }
    .gmap_canvas {
        height: 100%;
        width: 100%;
    }

    /****** gallery pages ******/
    #bigpic2 {
        height: auto !important;
        margin-top: 50px;
    }
    #bigpic2 img {
        width: 100%;
        height: auto;
        max-height: 9999px;
    }
    #bigpic2 p,
    #thumbs2 {
        display: none;
    }
    .content-left--gallery {
        margin-bottom: 0;
        padding-bottom: 0;
    }
    #sidebar span.sidebar-top {
        display: none;
    }
    #sidebar .content-left {
        padding: 0;
    }

    /****** mobile index ******/
    
    body#home.ind {
        background: -webkit-linear-gradient(top, #021420, #0e4260);
        background: -moz-linear-gradient(top, #021420, #0e4260);
        background: -ms-linear-gradient(top, #021420, #0e4260);
        background: -o-linear-gradient(top, #021420, #0e4260);
    }
    body#home.ind #header {
        background: none;
    }
    body#home.ind #header .top {
        display: none;
    }
    body#home.ind #featured {
        display: none;
    }
    .m-home {
        width: 100%;
        padding: 20px;
        box-sizing: border-box;
        display: block;
    }
    .m-home__logo {
        margin: 0 auto;
        display: block;
    }
    .m-home__phone {
        text-align: center;
        font-size: 18px;
    }
    .m-home__subhead {
        padding: 5px 0;
    }
    .m-home h1 {
        color: #faf8fa;
        font-size: 16px;
        text-align: center;        
    }
    .m-home h2{
        color: #faf8fa;
        text-align: center;
        padding: 12px 0;
        cursor: pointer;
        border-top: 1px solid #04283e;
        font-size: 22px;
        text-align: center;
    }
    .m-home h2:first-of-type {
        border-top: none;
    }
    .m-home__primary,
    .m-home__secondary {
        list-style: none;
    }
    .m-home__primary li {
        border-top: 2px solid #0d6196;
        border-left: 2px solid #0d6196;
        background: -webkit-linear-gradient(bottom, #082d42, #0e4260);
        background: -moz-linear-gradient(bottom, #082d42, #0e4260);
        background: -ms-linear-gradient(bottom, #082d42, #0e4260);
        background: -o-linear-gradient(bottom, #082d42, #0e4260);
        border-bottom: 2px solid #041016;
        border-right: 2px solid #0D3D59;

    }
    .m-home__primary li:last-of-type {
        border-bottom: 0;
    }
    .m-home__primary {
        margin: 20px 0;
        border: 4px solid #041016;
        background: #041526;
    }
    .m-home__secondary {
        font-size: 20px;
        border-bottom: 3px solid #041016;
        border-top: 3px solid #041016;
        display: none;
    }
    .m-home__secondary.active {
        display: block;
    }
    .m-home__secondary:last-of-type {
        border-bottom: none;
    }
    .m-home__secondary li {
        padding: 12px 10px;
        background: #ededed;
        box-sizing: border-box;
        border-bottom: 1px solid #041016;
        border-top: 0;
        border-left: 0;
        border-right: 0;
    }
    .m-home__secondary li a {
        color: #165c8d;
    }
    .m-home__secondary li:last-of-type {
        border-bottom: 0;
    }
    .m-home__contact,
    .m-home__contact:hover {
        color: #faf8fa;
        text-decoration: none;
    }

    /****** footer ******/
    #footer {
        background: #041016;
        box-sizing: border-box;
        padding: 0 10px;
        
    }

    #footer .copyright p {
        display: none;
    }
    #footer .copyright {
        background: none;
    }
    .copyright-content--mobile {
        display: inline-block;
        color: #bdbdbd;
        line-height: 18px;
        padding: 18px 0;
        width: auto;
        text-transform: uppercase;
    }
    .copyright-content--mobile div {
        margin-top: 6px;
    }
    .copyright-content--mobile div:first-of-type {
        margin-top: 0;
    }
}

